--- a/build-a-react-info-site/public/index.html
+++ b/build-a-react-info-site/public/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/App.css">
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>React Info Site</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
