--- a/travel-journal/public/index.html
+++ b/travel-journal/public/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/App.css">
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Travel Journal</title>
   </head>
   <body>
